<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shanlu.slu1_countbook.CounterDetailActivity">

    <TextView
        android:id="@+id/count_detail_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="16dp"
        android:text="@string/count_detail"
        android:textSize="16sp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/count_detail_bar">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="32dp"
                android:text="@string/count_name"/>

            <EditText
                android:id="@+id/counter_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_edit_hint"
                android:maxLines="1"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="32dp"
                android:text="@string/count_date"/>

            <TextView
                android:id="@+id/counter_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="32dp"
                android:text="@string/count_curr_val"/>

            <ImageButton
                android:id="@+id/add_val_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:src="@drawable/add_button"/>

            <EditText
                android:id="@+id/counter_curr_val_edit"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:hint="@string/val_edit_hint"
                android:maxLines="1"/>

            <ImageButton
                android:id="@+id/minus_val_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingStart="16dp"
                android:src="@drawable/minus_button"/>

        </LinearLayout>

        <Button
            android:id="@+id/reset_curr_val_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingStart="16dp"
            android:paddingBottom="16dp"
            android:paddingEnd="16dp"
            android:text="@string/reset_butt"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="32dp"
                android:text="@string/count_init_val"/>

            <EditText
                android:id="@+id/counter_init_val_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/val_edit_hint"
                android:maxLines="1"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="32dp"
                android:text="@string/count_comment"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/counter_comment_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="8"/>

            </ScrollView>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp">

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button"
            android:layout_weight="1"
            android:text="@string/save_butt"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button"
            android:layout_weight="1"
            android:text="@string/cancel_butt"/>

    </LinearLayout>

</RelativeLayout>
